--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,20 +12,13 @@
 
 <h2>Comments</h2>
 <div id="comments">
-	<% @post.comments.each do |comment| %>
-		<%= div_for comment do %>
-			<p>
-				<strong>Posted <%= time_ago_in_words(comment.created_at) %></strong><br />
-				<%= h(comment.body) %>
-			</p>
-		<% end %>
-	<% end %>
+	<%= render :partial => @post.comments.reverse %>
 </div>
 
-<%= form_for([@post, Comment.new]) do |form| %>
+<%= form_for([@post, Comment.new], remote: true) do |form| %>
 	<p>
 		<%= form.label :body, "New Comment" %><br />
-			<%= form.text_area :body %>
+		<%= form.text_area :body %>
 	</p>
 	<p>
 		<%= form.submit "Add Comment" %>
